--- a/code/package.json
+++ b/code/package.json
@@ -10,15 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.2.0",
-    "csv-loader": "^3.0.3",
-    "json5": "^2.2.0",
-    "style-loader": "^3.2.1",
-    "toml": "^3.0.0",
     "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "xml-loader": "^1.2.1",
-    "yamljs": "^0.3.0"
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
