--- a/code-v1/package.json
+++ b/code-v1/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
+    "lodash": "^4.17.21",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
   }
 }
