--- a/code/package.json
+++ b/code/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.3.2",
+    "lodash-es": "^4.17.21",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "sideEffects": []
 }
