--- a/code/package.json
+++ b/code/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "html-webpack-plugin": "^5.3.2",
     "lodash-es": "^4.17.21",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
