--- a/code/package.json
+++ b/code/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lodash-es": "^4.17.21",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
