--- a/complete/tsconfig.json
+++ b/complete/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "es2020",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node"
   }
 }
