--- a/complete/package.json
+++ b/complete/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.172",
+    "@types/lodash-es": "^4.17.4",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
@@ -23,5 +23,10 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
-  }
+  },
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss",
+    "**/*.sass"
+  ]
 }
