--- a/complete/package.json
+++ b/complete/package.json
@@ -16,6 +16,9 @@
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lodash-es": "^4.17.21",
+    "mini-css-extract-plugin": "^2.2.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
