--- a/complete/tsconfig.json
+++ b/complete/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "dist/",
+    "baseUrl": "./",
+    "paths": {
+      "Utilities/*": ["src/utilities/*"]
+    },
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "es2020",
