--- a/complete/tsconfig.json
+++ b/complete/tsconfig.json
@@ -3,7 +3,8 @@
     "outDir": "dist/",
     "baseUrl": "./",
     "paths": {
-      "Utilities/*": ["src/utilities/*"]
+      "Utilities/*": ["src/utilities/*"],
+      "Img/*": ["img/*"]
     },
     "sourceMap": true,
     "noImplicitAny": true,
