--- a/complete/package.json
+++ b/complete/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.2.0",
